# esp-idf

./: OTA
AliGenie_Mesh/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
components/tcpip_adapter/: tcpip_adapter_lwip.c
esp32_blufi_ota_mqtt/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  version.txt
esp32_blufi_ota_mqtt/main/: CMakeLists.txt  app_blufi.c  app_blufi.h  app_https_ota.c  app_https_ota.h  app_main.c  app_mqtt.c  app_mqtt.h  app_touch.c  app_user.c  app_user.h  blufi_security.c
esp32_blufi_ota_mqtt/server_certs/: ca_cert.pem
examples/bluetooth/esp_ble_mesh/ble_mesh_provisioner/main/: ble_mesh_demo_init.c  ble_mesh_demo_init.h
examples/system/app_trace_to_host/main/: app_trace_to_host_example_main.c
examples/system/ota/advanced_https_ota/: version.txt
examples/system/ota/advanced_https_ota/server_certs/: ca_cert.pem
